--- a/templates/about.html
+++ b/templates/about.html
@@ -62,7 +62,7 @@
 								<div class="top_bar_content ml-auto">
 									<div class="main_menu_contact">
 										<div class="main_menu_phone"><img src="/static/images/phone-call.svg" class="svg" alt=""><span>+825 25 800 800</span></div>
-										<div class="main_menu_email"><img src="/static/images/envelope.svg" class="svg" alt=""><span>office@invest.com</span></div>
+										<div class="main_menu_email"><img src="/static/images/envelope.svg" class="svg" alt=""><span>navoday91@gmail.com</span></div>
 									</div>
 									<div class="main_menu_social">
 										<ul>
@@ -80,7 +80,7 @@
 							</div>
 						</div>
 					</div>
-				</div>		
+				</div>
 			</div>
 
 			<!-- Main Menu -->
@@ -120,7 +120,7 @@
 											</svg>
 										</a></li>
 
-										<li><a href="#">contact
+										<li><a href="/contact">contact
 											<svg version="1.1" id="Layer_16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 												 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
 												<g>
@@ -166,7 +166,7 @@
 							</div>
 						</div>
 					</div>
-						
+
 				</div>
 				<ul class="menu_list">
 					<li class="menu_item">
@@ -227,7 +227,7 @@
 			</div>
 		</header>
 	</div>
-	
+
 	<!-- Features -->
 
 	<div class="features">
@@ -323,13 +323,13 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 test_faq_col">
-					
+
 
 					</div>
 				</div>
 
 				<div class="col-lg-6 test_faq_col">
-					
+
 					<!-- FAQ -->
 
 					<div class="faq">
@@ -337,28 +337,28 @@
 							<div class="section_subtitle">take a look at our</div>
 							<div class="section_title">Faq / Frequently asked questions</div>
 						</div>
-						
+
 						<!-- Accordions -->
 						<div class="elements_accordions">
 
 							<div class="accordion_container">
 								<div class="accordion d-flex flex-row align-items-center"><div>Do we offer 24x7 support?</div></div>
 								<div class="accordion_panel">
-									<p> Morbi ut dapibus dui. Sed ut iaculis elit. Integer ut imperdiet erat. Quisque ultricies lectus tellus, eu tristique magna pharetra nec. </p>
+									<p> Yes we do. Invest support is available all day, everyday! </p>
 								</div>
 							</div>
 
 							<div class="accordion_container">
 								<div class="accordion d-flex flex-row align-items-center"><div>Do we offer addtional services?</div></div>
 								<div class="accordion_panel">
-									<p>Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit. Integer ut imperdiet erat. Quisque ultricies lectus tellus, eu tristique magna pharetra nec. </p>
+									<p>More services are in the pipeline, check back in for more updates </p>
 								</div>
 							</div>
 
 							<div class="accordion_container">
 								<div class="accordion d-flex flex-row align-items-center active"><div>Are all services run real time?</div></div>
 								<div class="accordion_panel">
-									<p>Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit. Integer ut imperdiet erat. Quisque ultricies lectus tellus, eu tristique magna pharetra nec. </p>
+									<p>At Invest we only offer real time financial updates and suggestions that work with the current trend of the market. </p>
 								</div>
 							</div>
 
@@ -400,7 +400,7 @@
 					<div class="footer_about">
 						<div class="logo_container footer_logo">
 							<div class="logo">
-								<a href="#">
+								<a href="/">
 									<div class="logo_line_1"><span>CMPE</span>285</div>
 									<div class="logo_line_2">Invest</div>
 									<div class="logo_img"><img src="/static/images/logo.png" alt=""></div>
@@ -459,7 +459,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="col-md-8 order-md-2 order-1">
 						<nav class="footer_nav d-flex flex-row align-items-center justify-content-md-end">
 							<ul>
-								<li><a href="#">Home</a></li>
+								<li><a href="/">Home</a></li>
 								<li><a href="about.html">About us</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
