--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,7 +14,7 @@
 <body>
 
 <div class="super_container">
-	
+
 	<!-- Home -->
 
 	<div class="home">
@@ -27,7 +27,7 @@
 							<div class="home_title">Contact</div>
 							<div class="home_breadcrumbs">
 								<ul>
-									<li><a href="financial.html">Home</a></li>
+									<li><a href="/">Home</a></li>
 									<li>Contact</li>
 								</ul>
 							</div>
@@ -49,9 +49,9 @@
 							<div class="top_bar_container d-flex flex-row align-items-center justify-content-start">
 								<div class="logo_container">
 									<div class="logo">
-										<a href="#">
-											<div class="logo_line_1"><span>in</span>vest</div>
-											<div class="logo_line_2">Financial</div>
+										<a href="/">
+											<div class="logo_line_1"><span>CMPE</span>285</div>
+											<div class="logo_line_2">Invest</div>
 											<div class="logo_img"><img src="/static/images/logo.png" alt=""></div>
 										</a>
 									</div>
@@ -59,15 +59,14 @@
 								<div class="top_bar_content ml-auto">
 									<div class="main_menu_contact">
 										<div class="main_menu_phone"><img src="/static/images/phone-call.svg" class="svg" alt=""><span>+825 25 800 800</span></div>
-										<div class="main_menu_email"><img src="/static/images/envelope.svg" class="svg" alt=""><span>office@invest.com</span></div>
+										<div class="main_menu_email"><img src="/static/images/envelope.svg" class="svg" alt=""><span>navoday.91@gmail.com</span></div>
 									</div>
 									<div class="main_menu_social">
 										<ul>
-											<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-											<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-											<li><a href="#"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a></li>
-											<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
-											<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+											<li><a href="https://plus.google.com/u/0/114489718479320768927"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+											<li><a href="https://www.pinterest.com/navoday91/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+											<li><a href="https://www.reddit.com/user/FeltThrone18"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a></li>
+											<li><a href="https://twitter.com/feltthrone18"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 										</ul>
 									</div>
 								</div>
@@ -77,7 +76,7 @@
 							</div>
 						</div>
 					</div>
-				</div>		
+				</div>
 			</div>
 
 			<!-- Main Menu -->
@@ -89,7 +88,7 @@
 								<div class="main_menu_content">
 									<ul class="main_menu_list">
 										<li class="active hassubs">
-											<a href="#">home
+											<a href="/">home
 												<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 													 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
 													<g>
@@ -98,15 +97,7 @@
 												</svg>
 											</a>
 											<ul>
-												<li><a href="index.html">Blockchain
-													<svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-												<li><a href="financial.html">Financial
+												<li><a href="/suggestion">Financial
 													<svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
 														<g>
@@ -124,103 +115,8 @@
 												</g>
 											</svg>
 										</a></li>
-										<li class="hassubs">
-											<a href="services.html">services
-												<svg version="1.1" id="Layer_5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-													 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-													<g>
-														<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-													</g>
-												</svg>
-											</a>
-											<ul>
-												<li><a href="#">Menu Item
-													<svg version="1.1" id="Layer_6" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-												<li><a href="#">Menu Item
-													<svg version="1.1" id="Layer_7" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-												<li><a href="#">Menu Item
-													<svg version="1.1" id="Layer_8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-												<li><a href="#">Menu Item
-													<svg version="1.1" id="Layer_9" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-											</ul>
-										</li>
-										<li class="hassubs">
-											<a href="#">portfolio
-												<svg version="1.1" id="Layer_10" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-													 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-													<g>
-														<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-													</g>
-												</svg>
-											</a>
-											<ul>
-												<li><a href="#">Menu Item
-													<svg version="1.1" id="Layer_11" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-												<li><a href="#">Menu Item
-													<svg version="1.1" id="Layer_12" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-												<li><a href="#">Menu Item
-													<svg version="1.1" id="Layer_13" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-												<li><a href="#">Menu Item
-													<svg version="1.1" id="Layer_14" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-											</ul>
-										</li>
-										<li><a href="news.html">blog
-											<svg version="1.1" id="Layer_15" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-												 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-												<g>
-													<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-												</g>
-											</svg>
-										</a></li>
-										<li><a href="#">contact
+
+										<li><a href="contact.html">contact
 											<svg version="1.1" id="Layer_16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 												 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
 												<g>
@@ -266,14 +162,14 @@
 							</div>
 						</div>
 					</div>
-						
+
 				</div>
 				<ul class="menu_list">
 					<li class="menu_item">
 						<div class="container">
 							<div class="row">
 								<div class="col">
-									<a href="#">home</a>
+									<a href="/">home</a>
 								</div>
 							</div>
 						</div>
@@ -327,7 +223,7 @@
 			</div>
 		</header>
 	</div>
-	
+
 	<!-- Contact -->
 
 	<div class="contact">
@@ -341,15 +237,15 @@
 						</div>
 						<div class="info_title">Head Office</div>
 						<ul>
-							<li>Address: 1481 Creekside Lane Avila Beach, CA 93424</li>
-							<li>Phone: +53 345 7953 32453</li>
-							<li>Email: yourmail@gmail.com</li>
+							<li>Address: One Washington Square</li>
+							<li>Phone: +1 234 567 8900</li>
+							<li>Email: navoday91@gmail.com</li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-8 contact_form_col">
 					<div class="section_title_container">
-						<div class="section_subtitle">take a look at our</div>
+						<div class="section_subtitle">take a look at our services</div>
 						<div class="section_title">Get in touch</div>
 					</div>
 					<div class="contact_form_container">
@@ -386,7 +282,7 @@
 	</div>
 
 	<!-- Google Map -->
-		
+
 	<div class="map">
 		<div id="google_map" class="google_map">
 			<div class="map_container">
@@ -398,17 +294,17 @@
 				<div class="logo_container contact_logo">
 					<div class="logo">
 						<a href="#">
-							<div class="logo_line_1"><span>in</span>vest</div>
-							<div class="logo_line_2">Financial</div>
+							<div class="logo_line_1"><span>CMPE</span>285</div>
+							<div class="logo_line_2">Invest</div>
 							<div class="logo_img"><img src="/static/images/logo.png" alt=""></div>
 						</a>
 					</div>
 				</div>
 				<div class="map_contact_title">Head Office</div>
 				<ul>
-					<li>Address: 1481 Creekside Lane Avila Beach, CA 93424 </li>
-					<li>Phone: +53 345 7953 32453</li>
-					<li>Email: yourmail@gmail.com</li>
+					<li>Address: One Washington Square </li>
+					<li>Phone: +1 234 567 8900</li>
+					<li>Email: navoday91@gmail.com</li>
 				</ul>
 			</div>
 		</div>
@@ -426,13 +322,13 @@
 						<div class="logo_container footer_logo">
 							<div class="logo">
 								<a href="#">
-									<div class="logo_line_1"><span>in</span>vest</div>
-									<div class="logo_line_2">Blockchain</div>
+									<div class="logo_line_1"><span>CMPE</span>285</div>
+									<div class="logo_line_2">Invest</div>
 									<div class="logo_img"><img src="/static/images/logo.png" alt=""></div>
 								</a>
 							</div>
 						</div>
-						<p class="footer_about_text">Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit. Integer ut imperdiet erat. Quisque ultricies lectus tellus, eu tristique magna pharetra nec.</p>
+						<p class="footer_about_text">Check back in for more info!</p>
 					</div>
 				</div>
 
@@ -441,17 +337,9 @@
 					<div class="footer_links">
 						<div class="footer_title">Useful Links</div>
 						<ul>
-							<li><a href="#">Home</a></li>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Case Studies</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">Consulting</a></li>
-							<li><a href="#">Commodities</a></li>
-							<li><a href="#">Insurance</a></li>
-							<li><a href="#">Trades</a></li>
-							<li><a href="#">Planning</a></li>
-							<li><a href="#">Finance</a></li>
-							<li><a href="#">Crypto</a></li>
+							<li><a href="/">Home</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -464,7 +352,7 @@
 							<input type="email" class="footer_newsletter_input" placeholder="Your E-mail" required="required">
 							<button class="footer_newsletter_button" type="submit">subscribe</button>
 						</form>
-						<div class="footer_newsletter_text">Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit. Integer ut imperdiet erat. Quisque ultricies lectus tellus, eu tristique magna pharetra nec.</div>
+						<div class="footer_newsletter_text">Check back in for updates incoming</div>
 						<div class="footer_social">
 							<ul>
 								<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
@@ -492,16 +380,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="col-md-8 order-md-2 order-1">
 						<nav class="footer_nav d-flex flex-row align-items-center justify-content-md-end">
 							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">About us</a></li>
-								<li><a href="services.html">Services</a></li>
-								<li><a href="news.html">Blog</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="/">Home</a></li>
+								<li><a href="/about">About us</a></li>
+								<li><a href="/contact">Contact</a></li>
 							</ul>
 						</nav>
 					</div>
 				</div>
-			</div>			
+			</div>
 		</div>
 	</footer>
 </div>
