--- a/templates/index.html
+++ b/templates/index.html
@@ -145,7 +145,7 @@
 											</svg>
 										</a></li>
 
-										<li><a href="contact.html">contact
+										<li><a href="/contact">contact
 											<svg version="1.1" id="Layer_16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 												 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
 												<g>
