--- a/templates/suggestion.html
+++ b/templates/suggestion.html
@@ -46,7 +46,7 @@
 							<div class="top_bar_container d-flex flex-row align-items-center justify-content-start">
 								<div class="logo_container">
 									<div class="logo">
-										<a href="#">
+										<a href="/">
 											<div class="logo_line_1"><span>CMPE</span>285</div>
 											<div class="logo_line_2">Invest</div>
 											<div class="logo_img"><img src="/static/images/logo.png" alt=""></div>
@@ -56,7 +56,7 @@
 								<div class="top_bar_content ml-auto">
 									<div class="main_menu_contact">
 										<div class="main_menu_phone"><img src="/static/images/phone-call.svg" class="svg" alt=""><span>+825 25 800 800</span></div>
-										<div class="main_menu_email"><img src="/static/images/envelope.svg" class="svg" alt=""><span>office@invest.com</span></div>
+										<div class="main_menu_email"><img src="/static/images/envelope.svg" class="svg" alt=""><span>navoday91@gmail.com</span></div>
 									</div>
 									<div class="main_menu_social">
 										<ul>
@@ -74,7 +74,7 @@
 							</div>
 						</div>
 					</div>
-				</div>		
+				</div>
 			</div>
 
 			<!-- Main Menu -->
@@ -95,14 +95,6 @@
 												</svg>
 											</a>
 											<ul>
-												<li><a href="index.html">Blockchain
-													<svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
 												<li><a href="financial.html">Financial
 													<svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
@@ -121,59 +113,16 @@
 												</g>
 											</svg>
 										</a></li>
-										<li class="hassubs">
-											<a href="#">services
-												<svg version="1.1" id="Layer_5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-													 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-													<g>
-														<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-													</g>
-												</svg>
-											</a>
-											<ul>
-												<li><a href="#">Menu Item
-													<svg version="1.1" id="Layer_6" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-												<li><a href="#">Menu Item
-													<svg version="1.1" id="Layer_7" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-												<li><a href="#">Menu Item
-													<svg version="1.1" id="Layer_8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-												<li><a href="#">Menu Item
-													<svg version="1.1" id="Layer_9" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-														 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-														<g>
-															<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-														</g>
-													</svg>
-												</a></li>
-											</ul>
+										<li><a href="/contact">contact
+											<svg version="1.1" id="Layer_16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+												 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
+												<g>
+													<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
+												</g>
+											</svg>
+										</a></li>
 										</li>
 										<li class="hassubs">
-											<a href="#">portfolio
-												<svg version="1.1" id="Layer_10" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-													 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-													<g>
-														<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-													</g>
-												</svg>
-											</a>
 											<ul>
 												<li><a href="#">Menu Item
 													<svg version="1.1" id="Layer_11" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -209,22 +158,6 @@
 												</a></li>
 											</ul>
 										</li>
-										<li><a href="news.html">blog
-											<svg version="1.1" id="Layer_15" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-												 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-												<g>
-													<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-												</g>
-											</svg>
-										</a></li>
-										<li><a href="contact.html">contact
-											<svg version="1.1" id="Layer_16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-												 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
-												<g>
-													<polyline class="arrow_d" fill="none" stroke="#FFFFFF" stroke-miterlimit="10" points="0.022,-0.178 4.5,4.331 9.091,-0.275 	"/>
-												</g>
-											</svg>
-										</a></li>
 									</ul>
 								</div>
 								<div class="main_menu_contact ml-auto">
@@ -263,7 +196,7 @@
 							</div>
 						</div>
 					</div>
-						
+
 				</div>
 				<ul class="menu_list">
 					<li class="menu_item">
@@ -324,7 +257,7 @@
 			</div>
 		</header>
 	</div>
-	
+
 	<!-- Points -->
 
 	<div class="call">
@@ -335,7 +268,7 @@
 					<div class="section_title">Select Values To See Your Quote</div>
 				</div>
 				<div class="call_form_container">
-					<form action="#" class="call_form">
+					<form action="/map_stocks" class="call_form" method="post">
 						<div class="row">
 							<div class="col-md-6">
 								<input type="text" class="input_item" name="name" id="name" placeholder="Your Name" required="required">
@@ -376,7 +309,7 @@
 					<div class="footer_about">
 						<div class="logo_container footer_logo">
 							<div class="logo">
-								<a href="#">
+								<a href="/">
 									<div class="logo_line_1"><span>CMPE</span>285</div>
 									<div class="logo_line_2">Invest</div>
 									<div class="logo_img"><img src="/static/images/logo.png" alt=""></div>
@@ -455,4 +388,4 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="/static/plugins/parallax-js-master/parallax.min.js"></script>
 <script src="/static/js/custom.js"></script>
 </body>
-</html></html>
+</html>
