--- a/templates/investment_suggestions.html
+++ b/templates/investment_suggestions.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        table {
+          width:100%;
+        }
+        table, th, td {
+          border: 1px solid black;
+          border-collapse: collapse;
+        }
+        th, td {
+          padding: 15px;
+          text-align: left;
+        }
+        table#t01 tr:nth-child(even) {
+          background-color: #eee;
+          color: black;
+        }
+        table#t01 tr:nth-child(odd) {
+         background-color: #fff;
+         color: black;
+        }
+        table#t01 th {
+          background-color: #1B5181;
+          color: white;
+        }
+    </style>
 <title>Stock Portfolio Suggestion</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -274,8 +299,77 @@
                             <div class="owl-item">
                                 <div class="slider_background" style="background-image:url(/static/images/home_slider_1.jpg)"></div>
                                 <div class="home_slider_content text-center">
-                                    <h1>Investment Portfolio Suggestions</h1>
-                                    <div class="home_slider_text">View live stocks in real time from markets all across.</div>
+                                    <h1 align="center"><font color=#1B5181>
+                                        <b>Investment Portfolio Suggestions</b>
+                                    </font></h1>
+                                    <div class="container">
+							        <div class="row">
+								    <div class="col">
+                                    <div class="card" id="donutchart" align="center" style="width: 500px; height: 500px;">
+                                        <canvas id="myChart"></canvas>
+                                        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+                                        <script type="text/javascript">
+                    google.charts.load('current', {'packages':['corechart']});
+                    google.charts.setOnLoadCallback(drawChart);
+
+                    // Draw the chart and set the chart values
+                    function drawChart() {
+
+                      var symbol1 = '{{stock1Symbol}}';
+                      var amount1 = {{stock1Amount}};
+                      var symbol2 = '{{stock2Symbol}}';
+                      var amount2 = {{stock2Amount}};
+                      var symbol3 = '{{stock3Symbol}}';
+                      var amount3 = {{stock3Amount}};
+                      var data = google.visualization.arrayToDataTable([
+                      ['Stock', 'Investment'],
+                      [symbol1, amount1],
+                      [symbol2, amount2],
+                      [symbol3, amount3]
+                    ]);
+
+                      // Optional; add a title and set the width and height of the chart
+                      var options = {'title':'Stock Distribution', pieHole: 0.4,};
+
+                      // Display the chart inside the <div> element with id="donutchart"
+                      var chart = new google.visualization.PieChart(document.getElementById('donutchart'));
+                      chart.draw(data, options);
+                    }
+
+
+                                        </script>
+                                    </div>
+                                    </div>
+                                        <div class="col">
+                                    <table id="t01">
+                                        <tr>
+                                            <th>Stock Symbol</th>
+                                            <th>Stock Price</th>
+                                            <th>Number Of Stocks</th>
+                                            <th>Investment Amount</th>
+                                        </tr>
+                                        <tr>
+                                            <td>{{stock1Symbol}}</td>
+                                            <td>{{stock1cost}}</td>
+                                            <td>{{buynumber1}}</td>
+                                            <td>{{stock1Amount}}</td>
+                                        </tr>
+                                        <tr>
+                                            <td>{{stock2Symbol}}</td>
+                                            <td>{{stock2cost}}</td>
+                                            <td>{{buynumber2}}</td>
+                                            <td>{{stock2Amount}}</td>
+                                        </tr>
+                                        <tr>
+                                            <td>{{stock3Symbol}}</td>
+                                            <td>{{stock3cost}}</td>
+                                            <td>{{buynumber3}}</td>
+                                            <td>{{stock3Amount}}</td>
+                                        </tr>
+                                    </table>
+                                        </div>
+                                    </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -284,7 +378,35 @@
                                 <div class="slider_background" style="background-image:url(/static/images/home_slider_1.jpg)"></div>
                                 <div class="home_slider_content text-center">
                                     <h1>Weekly Trends</h1>
+                                    <div class="card" id="donutchart" align="center" style="width: 500px; height: 500px;">
+                                        <canvas id="myChart"></canvas>
+                                        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+                                        <script type="text/javascript">
+                    google.charts.load('current', {'packages':['corechart']});
+                    google.charts.setOnLoadCallback(drawChart);
 
+                    // Draw the chart and set the chart values
+                    function drawChart() {
+
+
+                      var data = google.visualization.DataTable([
+                      ['Stock', 'Investment'],
+                      [symbol1, amount1],
+                      [symbol2, amount2],
+                      [symbol3, amount3]
+                    ]);
+
+                      // Optional; add a title and set the width and height of the chart
+                      var options = {'title':'Weekly Trend of Portfolio', subtitle: 'Values in USD};
+
+                      // Display the chart inside the <div> element with id="linechart"
+                      var chart = new google.charts.Line(document.getElementById('linechart'));
+                      chart.draw(data, options);
+                    }
+
+
+                                        </script>
+                                    </div>
                                 </div>
                             </div>
 
